# aardvark-old

./: .gitignore  CMakeLists.txt  README.md  cache_painting.cpp  package-lock.json  renderer.js
android/: .gitignore  CMakeLists.txt  build.gradle
android/aardvark/: CMakeLists.txt  build.gradle
android/aardvark/gradle/wrapper/: gradle-wrapper.properties
android/aardvark/src/main/: AndroidManifest.xml
android/example/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/example/gradle/wrapper/: gradle-wrapper.properties
android/example/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: -main.cpp  CMakeLists.txt  main.cpp  main2.cpp
core/: .clang-format  .clang-tidy  .gitignore  API.txt  CMakeLists.txt  CODING_CONVENTIONS.md  app.cpp  element2.hpp
core/cmake/: find_externals.cmake  make_includable.cmake
core/docs/: Inline-rendering.md  elements.md  event-system.md  events.md  icu-data.md  rendering.md
core/fixtures/: webpack.config.js
core/libs/: adv.idl  api.yaml
core/libs/core/: CMakeLists.txt
core/libs/core/examples/: app_example.cpp  border_example.cpp  flex_example.cpp  responder_example.cpp  websocket_example.cpp
core/libs/core/src/: document.cpp  layer.cpp
core/libs/core/tests/: box_constraints_test.cpp  responder_test.cpp
core/libs/js/: CMakeLists.txt  DesktopWindow.yaml  element.yaml  elements.yaml  events.yaml
core/libs/js/api/: android_app.yaml  animation_frame.yaml  base_types.yaml  desktop_app.yaml  desktop_window.yaml  document.yaml  element.yaml  elements.yaml  error_location.yaml  events.yaml  inline.yaml
core/libs/js/examples/: example.cpp
core/libs/js/fixtures/: package.json
core/libs/js/scripts/: docgen.js  generate_api.js
core/libs/js/src/: android_host.cpp  android_jni.cpp  animation_frame.cpp  host.cpp  host.hpp  module_loader.cpp  module_loader.hpp  proxies.cpp  transform_mapping.cpp
core/libs/js/tests/: main.cpp  module_loader_test.cpp
core/libs/jsi/: CMakeLists.txt  README.md
core/libs/jsi/idl/: docgen.js  index.js
core/libs/jsi/scripts/: gen.js
core/libs/jsi/src/: android_jni.cpp  jsc.cpp  jsi.cpp  mappers.cpp  qjs.cpp
core/libs/jsi/tests/: check_test.cpp  idl_test.cpp  jsi_test.cpp  mappers_test.cpp
core/libs/ui/: CMakeLists.txt
core/libs/ui/examples/: jsc_example.cpp  paint_cache.cpp
core/libs/ui/src/: base_types.cpp  box_constraints.cpp  document.cpp  element.cpp  layer.cpp
core/libs/ui/tests/: align_test.cpp  base_types_test.cpp  box_constraints_test.cpp  element_observer_test.cpp  event_loop_test.cpp  responder_test.cpp  (+1 more)
core/scripts/: WebKit.patch  brew_install.sh  build_icu.sh  build_icu_android.sh  build_javascriptcore.sh  build_quickjs.sh  build_skia.sh  build_skia85_linux.sh  build_skia_android.sh  build_skia_linux.sh  cmake.sh  compile_icu.sh  download_deps.sh  icu.patch  install_system_deps.sh  install_system_deps_mac.sh  prepare_deps.sh  setup_deps.sh  skia.patch
core/src/: app.cpp  app.hpp  base_types.cpp  base_types.hpp  box_constraints.cpp  box_constraints.hpp  channels.hpp  compositing.cpp  compositing.hpp  desktop_app.cpp  desktop_app.hpp  desktop_window.cpp  desktop_window.hpp  document.cpp  document.hpp  element.cpp  element.hpp  element_observer.hpp  events.hpp  example.cpp  hello.cpp  hit_tester.cpp  hit_tester.hpp  layer.cpp  layer.hpp  layer_tree.cpp  layer_tree.hpp  paint_cache.cpp  paint_cache.hpp  responder.cpp  responder.hpp  window.cpp  window.hpp
core/src/elements/: align.cpp  align.hpp  background.cpp  background.hpp  border.cpp  border.hpp  center.cpp  center.hpp  clip.cpp  clip.hpp  custom_clip.cpp  custom_clip.hpp  custom_layout.hpp  elements.hpp  fixed_size.cpp  fixed_size.hpp  flex.cpp  flex.hpp  gesture_responder.cpp  gesture_responder.hpp  intrinsic_height.hpp  layer.cpp  layer.hpp  padding.cpp  padding.hpp  paragraph.cpp  paragraph.hpp  responder.cpp  responder.hpp  scroll.cpp  scroll.hpp  size.cpp  size.hpp  sized.cpp  sized.hpp  stack.cpp  stack.hpp  text.cpp  text.hpp  translate.cpp  (+1 more)
core/src/examples/: align_example.cpp  app_example.cpp  border_example.cpp  clip.cpp  clip_example.cpp  flex_example.cpp  jsc_example.cpp  jsc_example2.cpp  layer_example.cpp  paint_cache.cpp  paragraph_example.cpp  responder_example.cpp  src.js  websocket_example.cpp
core/src/inline_layout/: decoration_span.cpp  decoration_span.hpp  inline_layout.cpp  inline_layout.hpp  line_metrics.cpp  line_metrics.hpp  span.cpp  span.hpp  text_span.cpp  text_span.hpp  utils.cpp  utils.hpp  vert_align.hpp
core/src/js/: animation_frame.hpp  base_types_bindings.cpp  base_types_bindings.hpp  base_types_mappers.cpp  base_types_mappers.hpp  bindings_host.cpp  bindings_host.hpp  check_types.cpp  check_types.hpp  desktop_app_bindings.cpp  desktop_app_bindings.hpp  desktop_window_bindings.cpp  desktop_window_bindings.hpp  document_bindings.cpp  document_bindings.hpp  elements_bindings.cpp  elements_bindings.hpp  events_bindings.cpp  events_bindings.hpp  function_wrapper.hpp  helpers.cpp  helpers.hpp  js_evaluator.hpp  mappers.hpp  module_loader.cpp  module_loader.hpp  objects_index.hpp  signal_connection_bindings.cpp  signal_connection_bindings.hpp  timers_host.cpp  timers_host.hpp  typedefs.cpp  typedefs.hpp  websocket_bindings.cpp  websocket_bindings.hpp
core/src/pointer_events/: hit_tester.cpp  hit_tester.hpp  pointer_event_manager.cpp  pointer_event_manager.hpp  responder.hpp  responder_reconciler.cpp  responder_reconciler.hpp
core/src/tests/: align_test.cpp  base_types_test.cpp  box_constraints_test.cpp  element_observer_test.cpp  event_loop_test.cpp  js_module_loader.cpp  js_objects_index.cpp  responder_test.cpp  text_span_test.cpp
core/src/utils/: event_loop.cpp  event_loop.hpp  files_utils.cpp  files_utils.hpp  log.hpp  websocket.cpp  websocket.hpp
newcore/: .clang-format  .gitignore  CMakeLists.txt
newcore/libs/jsi/: CMakeLists.txt  README.md
rust/: .gitignore  Cargo.toml  rustfmt.toml
rust/.cargo/: config
rust/crates/core/: Cargo.toml
rust/crates/jsi/: .gitignore  Cargo.toml  bindgen.sh  build.rs
(+257 files in other folders)
